@@ -1,0 +1,69 @@
+/* This stylesheet was created by Michael Prokop for grml.org                  */
+/* Design was inspired by TeZeuZ:                                              */
+/* http://www.oswd.org/user/profile/id/6272                                    */
+/* http://alumnos.elo.utfsm.cl/~osrehe - thx!                                  */
+
+@media all {
+  html {background-color: #FFDA62;}
+  abbr[title] {border-bottom: 0px}
+  a {color:#C70036; text-decoration: underline}
+  acronym[title] {border-bottom: 1px dashed #000}
+  a.current {color:#999999}
+  a:hover {text-decoration: underline}
+  a.plain {text-decoration: none}
+  a.plain:hover {text-decoration: underline}
+  a.smalllink {font-size: 80%}
+  body {font-family: verdana, tahoma, helvetica, arial, sans-serif; font-size: 100%; background-color:#FFDA62; margin: 1em}
+  cite {font-size: 80%}
+  div.container {width: 90%; height: auto; text-align: left; background-color:#FFFFFF; border-style:solid; border-width:1px; border-color:#CFB8B8; margin: 0px auto 0px auto}
+  div.content {background-color:#FFFFFF; padding: 0.5em 0.5em 0.5em 0.5em; border-style:solid; border-width:1px; border-color:#F0F0F0; margin: 0.5em 0.5em 0.5em 0.5em}
+  div.content h3 a {color:#996666}
+  div.copyright {line-height: 3em; text-align:center; font-size:50%; background-color: #F8F8F8; color: #999999}
+  div.menu h3 a{color:#996666}
+  div.menu h3{font-size:70%; border-top-style:solid; border-top-width:1px; border-top-color:#E5E5E5; margin-bottom: -1em; border-bottom-width:0px}
+  div.menu {width: 10em; float: left; clear: left; background-color:#FFFFFF; padding: 0.5em 0.5em 0.5em 0.5em; border-style:solid; border-width:1px; border-color:#E5E5E5; margin: 0.5em 0.5em 0em 0.3em}
+  div.news a {font-weight:bold}
+  div.news {background-color:#FFFFFF; padding: 0em 0.5em 0.5em 0.5em; border-style:solid; border-width:1px; border-color:#E5E5E5; margin: 0em 0.5em 0.5em 12.2em}
+  div.news h3 a {color:#996666}
+  div.sub_links a {color: #FFFFFF}
+  div.sub_links {margin-top:0.5em; text-align:center; color: #FFFFFF; font-size:55%; clear: both; background-color:#8B8D7B}
+  h1 {color:#9C6562 ; font-size:110%; font-weight:bold}
+  /*h2 {color:#CC3300; font-size:90%; font-weight:bold}
+  h3 {color:#996666; font-size:70%; font-weight:bold; padding-bottom:0.3em; border-bottom-style:solid; border-bottom-width:1px; border-bottom-color:#CFB8B8;*/
+  h2 {color:#00309C; font-size:100%; font-weight:bold}
+  h3 {color:#996666; font-size:90%; font-weight:bold; padding-bottom:0.3em; border-bottom-style:solid; border-bottom-width:1px; border-bottom-color:#CFB8B8;
+	margin-bottom:0em}
+  h4 {color:#7F7F7F; font-size:80%; font-weight:bold}
+  p {text-align:justify; color:#666666; font-size: 70%; line-height: 1.5em}
+  ul {color:#666666; font-size:70%}
+  #texbox {}
+  .toc {font-size:70%}
+  ol {font-size:70%}
+/*div.search {
+	width: 10em;
+	float: left;
+	clear: left;
+	background-color:#FFFFFF;
+	padding: 0.5em 0.5em 0.5em 0.5em;
+	border-style:solid; border-width:1px; border-color:#E5E5E5;
+	margin: 0.5em 0.5em 0.3em 0.3em;
+}
+div.search h3{font-size:70%; border-bottom-width:0px}
+.searchbox {font-size:70%; color:#666666; border-style:solid; border-width:1px; border-color:#E5E5E5; margin-bottom:0.5em}
+div.copyright a {color: #AAA}
+  ul {font-size:70%; color:#666666; line-height: 1.5em;	list-style: none}
+  .tablenoprint {display: none}
+  .nav {display: none}
+*/
+}
+
+@media screen {
+  .active {background-color: #FFCC33}
+  .rahmen {background-color: #FEDB64; font-size: 90%; padding: 5px; border: 1px dotted black}
+  abbr[title], acronym[title] {cursor: help}
+}
+
+@media print {
+  body {font-family: Verdana, Arial, Helvetica, sans-serif; color: #000000}
+  .rahmen {padding: 5px; border: 1px dotted black}
+}
