@@ -7,6 +7,10 @@ grml-live (0.0.12) unstable; urgency=low
     Drop syslinux from Depends.
   * Mention -u option if using the option by accident and the chroot
     does not exist yet.
+  * Update buildd/cleanup.sh and add buildd/files/.logo.png, 
+    buildd/files/.style.css, buildd/files/HEADER.html and
+    buildd/link_latest.sh (create symlinks for latest snapshot ISOs).
+
 
  -- Michael Prokop <mika@grml.org>  Sun, 09 Dec 2007 17:28:01 +0100
 
